libtimezonemap (0.3.2) UNRELEASED; urgency=low

  * Use AC_CHECK_LIBM. Thanks Loic Minier!

 -- Evan Dandrea <ev@ubuntu.com>  Thu, 02 Feb 2012 11:58:03 +0000

libtimezonemap (0.3.1) precise; urgency=low

  * Ship m4/ directory, which accidentally got dropped when making the
    tarball for 0.3.  Fixes FTBFS 

 -- Michael Terry <mterry@ubuntu.com>  Mon, 09 Jan 2012 15:53:35 +0100

libtimezonemap (0.3) precise; urgency=low

  * Fix crash when freeing CcTimezoneLocation objects
  * Ship a .pc file
  * Ship include headers
  * Move .gir file from gir1.2-* package to *-dev package
  * Add CcTimezoneCompletion from indicator-datetime

 -- Michael Terry <mterry@ubuntu.com>  Mon, 09 Jan 2012 12:58:29 +0000

libtimezonemap (0.2.1) precise; urgency=low

  * Link with libm.

 -- Matthias Klose <doko@ubuntu.com>  Sun, 04 Dec 2011 21:55:46 +0100

libtimezonemap (0.2) oneiric; urgency=low

  * Expose TzLocations as GObjects.

 -- Evan Dandrea <ev@ubuntu.com>  Tue, 09 Aug 2011 10:23:25 +0100

libtimezonemap (0.1) oneiric; urgency=low

  * Initial release.

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 03 Aug 2011 10:21:41 +0100